recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:5: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:7: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:9: error: identifier expected but ')' found.
  droite(90.)
            ^FourSquare:14: error: identifier expected but ')' found.
  faireCarree(100.)
                  ^